Refactor FavoriteController to add getByType endpoint
